--- a/combstyles.css
+++ b/combstyles.css
@@ -1,6 +1,7 @@
 header.page-header {
     position: relative;
     z-index: 5;
+    font-size: 16pt;
     min-height: 20px;
     padding: 20px;
     color: white;
