range prop. change

--- a/combstyles.css
+++ b/combstyles.css
@@ -44,6 +44,6 @@ body {
     padding: 100px;
     width: auto;
     margin: auto;
-    // background-color: #FFFFFF;
-    background:  linear-gradient(to bottom, hsla(0, 0%, 100%, 0.2), hsla(0, 0%, 100%, 1)), linear-gradient(to left, hsla(191, 100%, 86%, 1), hsla(77, 100%, 86%, 1));
+    background-color: #FFFFFF;
+    /* background:  linear-gradient(to bottom, hsla(0, 0%, 100%, 0.2), hsla(0, 0%, 100%, 1)), linear-gradient(to left, hsla(191, 100%, 91%, 1), hsla(77, 100%, 91%, 1)); */
 }
