--- a/combstyles.css
+++ b/combstyles.css
@@ -17,33 +17,59 @@ footer.page-footer {
     padding: 20px;
     font-size: 14px;
     color: hsl(0,0%,99%);
-    background-color: hsl(0,0%,12%);;
+    background-color: hsl(0,0%,12%);
+    position: relative;
+    clear:both;
+}
 
+
+.settingsPanel {
+   //  background-color: #EA2663;
+    float: left;
+    width: 20%;
+}
+.sortViewsContainer {
+    // background-color: #F9D7FF;
+    padding-right: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    float: left;
+    width: 60%;
+
+}
+.sortButton {
+    display: inline-block;
+    margin: 0 40px 0 40px;
+    padding: 0px 20px 0px 20px;
+    border: solid #839192;
+    border-radius: 20%;
+    background-color: #FAFAFA;
 }
 
 body {
     margin: 0;
     padding: 0;
-    background-color: #333333;
+    min-height: 1000px;
+
 }
 .settingsText {
-    width: 30%;
+    width: auto;
     float: left;
 }
 .settingsRange {
-    width: 70%;
-    float: right;
+    margin-top: 30px;
+    width: auto;
+    float: left;
 }
 
 
 .sortPlace {
-    width: 700px;
-    margin: auto;
+
 }
 .mainPage {
-    padding: 100px;
-    width: auto;
-    margin: auto;
-    background-color: #FFFFFF;
-    /* background:  linear-gradient(to bottom, hsla(0, 0%, 100%, 0.2), hsla(0, 0%, 100%, 1)), linear-gradient(to left, hsla(191, 100%, 91%, 1), hsla(77, 100%, 91%, 1)); */
+    padding: 40px;
+    min-height: inherit;
+
+    background: linear-gradient(to bottom, hsla(0, 0%, 100%, 0.4), hsla(0, 0%, 100%, 1)), linear-gradient(to left, hsla(191, 100%, 91%, 1), hsla(77, 100%, 91%, 1));
 }
