--- a/combstyles.css
+++ b/combstyles.css
@@ -68,6 +68,10 @@ select.softFlowSelect {
 }
 
 @media screen and (max-width: 2000px) {
+    canvas {
+        width: 800px;
+        height: 800px;
+    }
     input {
         display: inline-block;
         width: 80%;
